syntax = "proto3";

// Package Motor is used for defining a Motor node and its properties.
package sonrhq.highway.vault;
import "common/v1/data.proto";
import "google/api/annotations.proto";
option go_package = "github.com/sonr-hq/sonr/core/highway/types/vault";

message KeygenRequest {
    string prefix = 1;
}

message KeygenResponse {
    bytes id = 1;
    string address = 2;
    common.v1.WalletShareConfig share_config = 3;
    string vault_cid = 4;
}

message RefreshRequest {
    repeated common.v1.WalletShareConfig share_configs = 1;
}

message RefreshResponse {
    bytes id = 1;
    repeated common.v1.WalletShareConfig share_configs = 2;
}

message SignRequest {
    bytes id = 1;
    bytes data = 2;
    repeated common.v1.WalletShareConfig share_configs = 3;
}

message SignResponse {
    bytes id = 1;
    bytes signature = 2;
    bytes data = 3;
    repeated common.v1.WalletShareConfig share_configs = 4;
}

message DeriveRequest {
    bytes id = 1;
    uint64 index = 2;
    repeated common.v1.WalletShareConfig share_configs = 3;
}

message DeriveResponse {
    bytes id = 1;
    string address = 2;
    repeated common.v1.WalletShareConfig share_configs = 3;
}

service Vault {
    // Keygen generates a new keypair and returns the public key.
    rpc Keygen(KeygenRequest) returns (KeygenResponse) {
        option (google.api.http).post = "/sonr-io/highway/vault/keygen";
        option (google.api.http).body = "*";
    }

    // Refresh refreshes the keypair and returns the public key.
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {
        option (google.api.http).post = "/sonr-io/highway/vault/refresh";
        option (google.api.http).body = "*";
    }

    // Sign signs the data with the private key and returns the signature.
    rpc Sign(SignRequest) returns (SignResponse) {
        option (google.api.http).post = "/sonr-io/highway/vault/sign";
        option (google.api.http).body = "*";
    }

    // Derive derives a new key from the private key and returns the public key.
    rpc Derive(DeriveRequest) returns (DeriveResponse) {
        option (google.api.http).post = "/sonr-io/highway/vault/derive";
        option (google.api.http).body = "*";
    }
}
